tailwind added as a dependancy

--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "url": "https://github.com/oddvarzk/SemesterProject2/issues"
   },
   "homepage": "https://github.com/oddvarzk/SemesterProject2#readme",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "tailwindcss": "^3.4.3"
+  }
 }
