removed other not needed dependancies

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "homepage": "https://github.com/oddvarzk/SemesterProject2#readme",
   "description": "",
+  "type": "module",
   "devDependencies": {
     "tailwindcss": "^3.4.3"
   }
