--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.0.2",
   "main": "index.js",
   "scripts": {
-    "dev": "npx tailwindcss -i ./styles/tailwind.css -o ./styles/output.css --watch"
+    "dev": "npx tailwindcss -i ./styles/tailwind.css -o ./styles/output.css --watch",
+    "format": "prettier -w src/**/*.js",
+    "lint": "eslint src/**/*.js",
+    "lint-fix": "eslint src/**/*.js --cache --fix"
   },
   "repository": {
     "type": "git",
@@ -18,6 +21,10 @@
   "description": "Semester Project 2 - CA",
   "type": "module",
   "devDependencies": {
+    "@eslint/js": "^9.2.0",
+    "eslint": "^9.2.0",
+    "globals": "^15.1.0",
+    "prettier": "^3.2.5",
     "tailwindcss": "^3.4.3"
   }
 }
