npm run build command

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.3",
   "main": "index.js",
   "scripts": {
+    "build": "npx tailwindcss -i ./styles/tailwind.css -o ./styles/output.css",
     "dev": "npx tailwindcss -i ./styles/tailwind.css -o ./styles/output.css --watch",
     "format": "prettier -w auctionPage/**/*.html"
   },
